fixed scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,3 +13,8 @@ html {
   overflow-x: hidden;
   font-family: "Bricolage Grotesque", sans-serif;
 }
+
+html::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
